<resources>
    <string name="app_name">StoryVerse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_your_account">Create your account</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="isKid">Kide</string>
    <string name="already_hav">Already have account?</string>
    <string name="log_in"><u>Log in</u></string>


</resources>