<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackgroundColor"
    tools:context=".Fragment.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/create_your"
                    android:layout_width="163dp"
                    android:layout_height="96dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="93dp"
                    android:text="@string/create_your_account"
                    android:textAppearance="@style/create_your"
                    android:lineSpacingExtra="20sp"
                    android:translationY="-9.94sp"
                    android:gravity="top"
                    />

                <EditText
                    android:hint="@string/enter_your_name"
                    android:layout_below="@id/create_your"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/userName"
                    android:textColor="@color/MainTextColor"
                    android:textColorHint="@color/MainHintColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/userMail"
                    android:textColor="@color/MainTextColor"
                    android:textColorHint="@color/MainHintColor"
                    android:hint="@string/email_address"
                    android:layout_below="@id/userName"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />
                <EditText
                    android:id="@+id/userNumber"
                    android:textColor="@color/MainTextColor"
                    android:textColorHint="@color/MainHintColor"
                    android:hint="@string/phone_number"
                    android:layout_below="@id/userMail"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/userPassword"
                    android:textColor="@color/MainTextColor"
                    android:textColorHint="@color/MainHintColor"
                    android:hint="@string/password"
                    android:layout_below="@id/userNumber"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:inputType="textPassword" />


                <EditText
                    android:id="@+id/userConfirmPassword"
                    android:textColor="@color/MainTextColor"
                    android:textColorHint="@color/MainHintColor"
                    android:hint="@string/confirm_password"
                    android:layout_below="@id/userPassword"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:inputType="textPassword" />


                <Switch
                    android:id="@+id/isKidSwitch"
                    android:layout_below="@id/userConfirmPassword"
                    android:layout_centerHorizontal="true"
                    android:text="@string/isKid"
                    android:textColor="@color/MainTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Button
                    android:layout_marginTop="@dimen/_15sdp"
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    style="@style/sign_up"
                    android:text="@string/sign_up"
                    android:layout_below="@id/isKidSwitch"
                    android:background="@drawable/rectangle_2"/>
                <TextView
                    android:id="@+id/already_hav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MainTextColor"
                    android:text="@string/already_hav"
                    android:textAppearance="@style/already_hav"
                    android:lineSpacingExtra="@dimen/_4ssp"
                    android:translationY="-1.8sp"
                    android:gravity="top"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/sign_up"
                    />

                <TextView
                    android:id="@+id/log_in"
                    android:layout_width="wrap_content"
                    android:textColor="@color/MainTextColor"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sign_up"
                    android:layout_toEndOf="@+id/already_hav"
                    android:gravity="top"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/log_in"
                    android:textAppearance="@style/already_hav"
                    android:translationY="-1.8sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>